feat(core): add icon for menu

--- a/configure/etc/conf/i18n/messages_zh-cn.properties
+++ b/configure/etc/conf/i18n/messages_zh-cn.properties
@@ -424,6 +424,7 @@ common.clear=清空
 common.reset=重置
 common.cropper=裁剪
 common.tip.pageNotNetwork=哎呀！无法连接到网络，请检查网络是否正常！
+common.store=商店
 
 ## User i18n
 user.common.username=用户名
