--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -424,6 +424,7 @@ common.clear=Clear
 common.reset=Reset
 common.cropper=Crop
 common.tip.pageNotNetwork=Oops! Unable to connect to the network. Please check your connection!
+common.store=Store
 
 ## User i18n
 user.common.username=Username
