feat(plugin): support for new plugin manager

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -425,6 +425,15 @@ common.reset=Reset
 common.cropper=Crop
 common.tip.pageNotNetwork=Oops! Unable to connect to the network. Please check your connection!
 common.store=Store
+common.author=Author
+common.releasedTime=Released Time
+common.install=Install
+common.uninstall=Uninstall
+common.plugin.version=Plugin Version
+common.plugin.systemVersion=Current system version: 
+common.plugin.list.name=Plugin List
+common.plugin.list.description=List of available plugins
+common.plugin.list.supportVersion=Support Version
 
 ## User i18n
 user.common.username=Username
