--- a/configure/etc/conf/i18n/messages_zh-cn.properties
+++ b/configure/etc/conf/i18n/messages_zh-cn.properties
@@ -425,6 +425,15 @@ common.reset=重置
 common.cropper=裁剪
 common.tip.pageNotNetwork=哎呀！无法连接到网络，请检查网络是否正常！
 common.store=商店
+common.author=作者
+common.releasedTime=发布时间
+common.install=安装
+common.uninstall=卸载
+common.plugin.version=插件版本
+common.plugin.systemVersion=当前系统版本: 
+common.plugin.list.name=插件列表
+common.plugin.list.description=可用的插件列表
+common.plugin.list.supportVersion=支持的版本
 
 ## User i18n
 user.common.username=用户名
