feat(plugin): support fix metadata versions

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -430,6 +430,7 @@ common.releasedTime=Released Time
 common.install=Install
 common.uninstall=Uninstall
 common.installTime=Install Time
+common.installVersion=Install Version
 common.plugin.version=Plugin Version
 common.plugin.systemVersion=Current system version: 
 common.plugin.list.name=Plugin List
