--- a/configure/etc/conf/i18n/messages_zh-cn.properties
+++ b/configure/etc/conf/i18n/messages_zh-cn.properties
@@ -430,6 +430,7 @@ common.releasedTime=发布时间
 common.install=安装
 common.uninstall=卸载
 common.installTime=安装时间
+common.installVersion=安装版本
 common.plugin.version=插件版本
 common.plugin.systemVersion=当前系统版本: 
 common.plugin.list.name=插件列表
