feat(plugin): support install plugin

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -429,6 +429,8 @@ common.author=Author
 common.releasedTime=Released Time
 common.install=Install
 common.uninstall=Uninstall
+common.installSuccess=Installed successfully
+common.uninstallSuccess=Uninstalled successfully
 common.installTime=Install Time
 common.installVersion=Install Version
 common.plugin.version=Plugin Version
