refactor(dashboard): refactor delete

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -1,3 +1,14 @@
+## DataBuilder
+builder.component.basic=Basic Component
+builder.component.textGroup=Text Configure
+builder.component.styleGroup=Style Configure
+builder.component.basic.text=Text
+builder.component.basic.text.placeholder=Please enter text
+builder.component.basic.text.backgroundColor=Background Color
+builder.component.basic.text.borderRadius=Border Radius
+builder.component.chart=Chart Component
+builder.component.chartLine=Line Chart
+
 state.common.create=Created
 state.common.running=Running
 state.common.success=Run Successful
