--- a/configure/etc/conf/i18n/messages_zh-cn.properties
+++ b/configure/etc/conf/i18n/messages_zh-cn.properties
@@ -1,3 +1,14 @@
+## DataBuilder
+builder.component.basic=基础组件
+builder.component.textGroup=文本配置
+builder.component.styleGroup=样式配置
+builder.component.basic.text=文本
+builder.component.basic.text.placeholder=请输入文本
+builder.component.basic.text.backgroundColor=背景颜色
+builder.component.basic.text.borderRadius=边框半径
+builder.component.chart=图表组件
+builder.component.chartLine=折线图
+
 state.common.create=已创建
 state.common.running=运行中
 state.common.success=运行成功
