feat(workflow): support submit task

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -318,6 +318,7 @@ pipeline.common.input=Input Source
 pipeline.common.output=Output Source
 pipeline.common.transform=Transform
 pipeline.common.resetTransform=Reset Transform
+pipeline.common.name=Pipeline Name
 pipeline.tip.deleteSuccess=Pipeline [ $VALUE ] deleted successfully
 pipeline.tip.deleteAlert1=You are about to delete a pipeline. This action will permanently delete the pipeline. Please confirm before proceeding.
 pipeline.tip.deleteAlert2=Warning: This action cannot be undone.
