--- a/configure/etc/conf/i18n/messages_zh-cn.properties
+++ b/configure/etc/conf/i18n/messages_zh-cn.properties
@@ -318,6 +318,7 @@ pipeline.common.input=输入源
 pipeline.common.output=输出源
 pipeline.common.transform=数据转换
 pipeline.common.resetTransform=重置变换
+pipeline.common.name=流水线名称
 pipeline.tip.deleteSuccess=删除流水线 [ $VALUE ] 成功
 pipeline.tip.deleteAlert1=您正在删除流水线。此操作将永久删除流水线。在继续操作之前，请务必确认您的操作。
 pipeline.tip.deleteAlert2=警告：此操作无法撤销。
@@ -333,6 +334,7 @@ pipeline.validator.to=请配置输出源信息
 pipeline.validator.edge=请连接输入和输出源
 pipeline.validator.name.required=流水线名称不能为空
 pipeline.validator.name.match=输入的流水线名称不正确，请输入 [$VALUE]
+
 
 ## Common i18n
 common.home=首页
