feat(workflow): support workflow

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -8,7 +8,6 @@ builder.component.basic.text.backgroundColor=Background Color
 builder.component.basic.text.borderRadius=Border Radius
 builder.component.chart=Chart Component
 builder.component.chartLine=Line Chart
-
 state.common.create=Created
 state.common.running=Running
 state.common.success=Run Successful
@@ -16,7 +15,6 @@ state.common.failure=Run Failed
 state.common.stop=Stopped
 state.common.timeout=Run Timed Out
 state.common.queue=Queued
-
 ## Query i18n
 query.common.execute=Execute
 query.common.executeSelection=Execute (Selection)
@@ -31,7 +29,6 @@ query.common.historyDataInfo=Historical Data of [ $VALUE ]
 query.tip.pageShow=Toggle Pagination
 query.tip.smallTips=Tip: Hold the Shift key and use the mouse to select rows; the selected rows will be copied automatically.
 query.tip.notPresetToken=No available tokens. Please configure tokens in your profile.
-
 ## Source i18n
 source.common.list=Data Source List
 source.common.modify=Modify Data Source [ $NAME ]
@@ -179,7 +176,6 @@ source.validator.columnName.pattern=Invalid column name. Must start with a lette
 source.validator.columnType.required=Column type cannot be empty.
 source.validator.columnLength.required=Column length cannot be empty.
 source.validator.columnLength.min=Column length cannot be less than 0.
-
 ## Grid i18n
 grid.selectAll=(Select All)
 grid.selectAllSearchResults=(Select All Search Results)
@@ -220,7 +216,6 @@ grid.lastPage=Last Page
 grid.firstPage=First Page
 grid.previousPage=Previous Page
 grid.pivotColumnGroupTotals=Totals
-
 ## Heatmap i18n
 heatmap.common.jan=January
 heatmap.common.feb=February
@@ -245,19 +240,16 @@ heatmap.common.am=AM
 heatmap.common.less=Less
 heatmap.common.more=More
 heatmap.common.query=Query
-
 ## Region i18n
 region.common.selectLanguage=Select Language
 region.common.asia.default=Asia
 region.common.asia.chineseSimple=Simplified Chinese
 region.common.northAmerica.default=North America
 region.common.northAmerica.english=English
-
 ## Template i18n
 template.common.list=Template List
 template.common.create=Create Template
 template.common.modify=Modify Template [ $NAME ]
-
 ## Menu i18n
 menu.common.list=Menu List
 menu.common.create=Create Menu
@@ -270,7 +262,6 @@ menu.common.icon=Icon
 menu.tip.selectType=Please select a type
 menu.tip.selectParent=Please select a parent menu
 menu.tip.selectRedirect=Please select a redirect menu
-
 ## Snippet i18n
 snippet.common.list=Snippet List
 snippet.common.create=Create Snippet
@@ -286,7 +277,6 @@ snippet.tip.deleteAlert4=To confirm, type [ $VALUE ] in the box below.
 snippet.placeholder.name=Please enter a snippet name
 snippet.validator.name.required=Snippet name cannot be empty
 snippet.validator.name.match=Invalid snippet name, please enter [$VALUE]
-
 ## Report i18n
 report.common.list=Report List
 report.common.view=View Report [ $VALUE ]
@@ -302,7 +292,6 @@ report.placeholder.name=Please enter a report name
 report.placeholder.description=Please enter a report description
 report.validator.name.required=Report name cannot be empty
 report.validator.name.match=Invalid report name, please enter [$VALUE]
-
 ## Pipeline i18n
 pipeline.common.list=Pipeline List
 pipeline.common.logger=Pipeline Logger
@@ -334,7 +323,6 @@ pipeline.validator.to=Please configure the output source information
 pipeline.validator.edge=Please connect the input and output sources
 pipeline.validator.name.required=Pipeline name cannot be empty
 pipeline.validator.name.match=Invalid pipeline name, please enter [$VALUE]
-
 ## Common i18n
 common.home=Home
 common.dashboard=Dashboard
@@ -453,7 +441,7 @@ common.plugin.list.description=List of available plugins
 common.plugin.list.supportVersion=Support Version
 common.plugin.metadata.url=Metadata URL
 common.plugin.metadata.description=Fill in the full path of the address of the metadata, for example, http://127.0.0.1:8080/metadata.json
-
+common.workflow=Workflow
 ## User i18n
 user.common.username=Username
 user.common.password=Password
@@ -535,7 +523,6 @@ user.tip.newPassword=Used to modify the new password of the user.
 user.tip.confirmPassword=Used to confirm the new password of the user.
 user.validate.newPassword=Please enter a new password.
 user.validate.confirmPassword=Please enter the confirm password.
-
 ## Role i18n
 role.common.list=Role List
 role.common.create=Create Route
@@ -548,11 +535,9 @@ role.tip.name=Please enter route name.
 role.tip.description=Please enter route description.
 role.validate.nameSize=Route name must be 3-20 characters long.
 role.validate.descriptionSize=Route description must be 3-50 characters long.
-
 ## Schedule i18n
 schedule.common.list=Schedule List
 schedule.common.history=Schedule History
-
 ## Dashboard i18n
 dashboard.common.list=Dashboard List
 dashboard.common.delete=Delete Dashboard
@@ -569,7 +554,6 @@ dashboard.placeholder.name=Please enter dashboard name.
 dashboard.placeholder.description=Please enter dashboard description.
 dashboard.validator.name.required=Dashboard name cannot be empty.
 dashboard.validator.name.match=The entered dashboard name is incorrect. Please enter [$VALUE].
-
 ## Function i18n
 function.common.list=Function List
 function.common.keyword=Keyword
@@ -582,7 +566,6 @@ function.common.create=Create Function
 function.common.modify=Modify Function [ $NAME ]
 function.tip.selectPluginHolder=Please select a plugin
 function.tip.selectTypeHolder=Please select a type
-
 ## Dataset i18n
 dataset.common.list=Dataset List
 dataset.common.adhoc=Ad-hoc Query
@@ -731,3 +714,24 @@ dataset.tip.rebuildProgress=Rebuild will only proceed with unfinished progress
 dataset.tip.lifeCycleMustDateColumn=Lifecycle must include a date column
 dataset.tip.modifyNotSupportDataPreview=Modification does not currently support data preview
 dataset.tip.publishSuccess=Dataset [ $VALUE ] published successfully
+workflow.text.create=Create workflow
+workflow.text.name=Workflow name
+workflow.text.configure=Workflow Configuration
+workflow.text.list=Workflow List
+workflow.text.stop=Stop workflow
+workflow.text.logger=Workflow Logger
+workflow.text.delete=Delete workflow
+workflow.text.flow=Workflow View
+workflow.text.modify=Modify workflow
+workflow.validator.name.required=Workflow name is required
+workflow.validator.name.match=The input workflow name is incorrect, please input [$VALUE]
+workflow.placeholder.name=Please input workflow name
+workflow.tip.publishSuccess=Publish workflow [ $VALUE ] successfully
+workflow.tip.deleteSuccess=Workflow [ $VALUE ] deleted successfully
+workflow.tip.deleteAlert1=You are about to delete a pipeline. This action will permanently delete the pipeline. Please confirm before proceeding.
+workflow.tip.deleteAlert2=Warning: This action cannot be undone.
+workflow.tip.deleteAlert3=To confirm, type [ $VALUE ] in the box below.
+workflow.tip.stopAlert1=You are about to stop the workflow. This action will permanently stop it. Please confirm before proceeding.
+workflow.tip.stopAlert2=Warning: This action cannot be undone.
+workflow.tip.stopAlert3=To confirm, type [ $VALUE ] in the box below.
+workflow.tip.stopSuccess=Workflow [ $VALUE ] stopped successfully
