feat(workflow): support workflow restart

--- a/configure/etc/conf/i18n/messages_en.properties
+++ b/configure/etc/conf/i18n/messages_en.properties
@@ -723,6 +723,7 @@ workflow.text.logger=Workflow Logger
 workflow.text.delete=Delete workflow
 workflow.text.flow=Workflow View
 workflow.text.modify=Modify workflow
+workflow.text.restart=Restart workflow
 workflow.validator.name.required=Workflow name is required
 workflow.validator.name.match=The input workflow name is incorrect, please input [$VALUE]
 workflow.placeholder.name=Please input workflow name
@@ -735,3 +736,4 @@ workflow.tip.stopAlert1=You are about to stop the workflow. This action will per
 workflow.tip.stopAlert2=Warning: This action cannot be undone.
 workflow.tip.stopAlert3=To confirm, type [ $VALUE ] in the box below.
 workflow.tip.stopSuccess=Workflow [ $VALUE ] stopped successfully
+workflow.tip.restartSuccess=Restart workflow [ $VALUE ] successfully
