feat(workflow): fix logger

--- a/configure/etc/conf/i18n/messages_zh-cn.properties
+++ b/configure/etc/conf/i18n/messages_zh-cn.properties
@@ -441,7 +441,7 @@ common.plugin.list.description=可用的插件列表
 common.plugin.list.supportVersion=支持的版本
 common.plugin.metadata.url=元数据地址
 common.plugin.metadata.description=元数据的地址填写完整路径，例如：http://127.0.0.1:8080/metadata.json
-common.workflow=流程
+common.workflow=工作流
 ## User i18n
 user.common.username=用户名
 user.common.password=密码
